--- a/finalprojectpage2.css
+++ b/finalprojectpage2.css
@@ -3,13 +3,13 @@
   top: 20px; 
   right: 200px; /* Both top, right, and length elements change where the links stay */
   length: 100px;
-  font-family:"Verdana"; /* Changes the font of the text */
-  color: #8F6A2F; /* Changes the color of the text */
 }
 .navigation a { /* This styles the links */
+  font-family:"Verdana"; /* Changes the font of the text */
+  color: #8F6A2F; /* Changes the color of the text */
   text-decoration: underline; /* Creates a line under the hyper links */
 }
-.photopackagesh1 h1 {/* This styles "About Us" header */
+.photopackagesh1 h1 {/* This styles "Photo Packages" header */
   text-align: center; /* Moves header to the center of the page */
   font-family:"Brush Script MT"; /* Changes the font of the text */
   font-size: 5.2rem; /* Changes the font-size */
