--- a/finalprojectpage2.css
+++ b/finalprojectpage2.css
@@ -9,7 +9,7 @@
   color: #8F6A2F; /* Changes the color of the text */
   text-decoration: underline; /* Creates a line under the hyper links */
 }
-.photopackagesh1 h1 {/* This styles "Photo Packages" header */
+.photopackagesh1 h1 {/* This styles the "Photo Packages" header */
   text-align: center; /* Moves header to the center of the page */
   font-family:"Brush Script MT"; /* Changes the font of the text */
   font-size: 5.2rem; /* Changes the font-size */
