--- a/finalprojectpage3.css
+++ b/finalprojectpage3.css
@@ -10,7 +10,7 @@
   color: #8F6A2F; /* Changes the color of the text */
   text-decoration: underline; /* Creates a line under the hyper links */
 }
-.faqh1  h1 {/* This styles "Frequently Asked Questions" header */
+.faqh1  h1 {/* This styles the "Frequently Asked Questions" header */
   text-align: center; /* Moves header to the center of the page */
   font-family:"Brush Script MT"; /* Changes the font of the text */
   font-size: 5.2rem; /* Changes the font-size */
